--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Composer</string>
     <string name="title_activity_layouts_in_compose">LayoutsInComposeActivity</string>
     <string name="title_activity_material_components_intro">MaterialComponentsIntroActivity</string>
+    <string name="title_activity_list_preview">ListPreviewActivity</string>
 </resources>
